# DhTas

./: .gitignore  CMakeLists.txt  README.md
common/: hookargs.h
datafiles/documents12/My Games/Dishonored/DishonoredGame/Config/: DishonoredEngine.ini  DishonoredInput.ini
datafiles/documents14/My Games/Dishonored/DishonoredGame/Config/: DishonoredEngine.ini  DishonoredInput.ini
datafiles/scripts/: any.py  main.py  record.py  utilities.py
datafiles/userdata/: OPTIONS.sav
docs/: movement.tex
hook/: debug.h  defines.h  dllmain.cpp  hooks.h  initguid.cpp  pytas.cpp  pytas.h  state.h  steam.cpp  steam.h  steam_api.h  window.cpp  window.h
injector/: inject_dll-payload.cpp  inject_dll.cpp  inject_dll.h  main.cpp
sumhook/: CMakeLists.txt
sumhook/include/: sumhook.h
sumhook/src/: sumhook.cpp
sumhook/test/: main.cpp
typings/: _pytas.pyi
